--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         </a>
                     </div>
                     <div class="topbar-one__middle">
-                        <a href="index.html"
+                        <a href="./"
                            class="main-nav__logo">
                             <img src="assets/images/resources/logo.png"
                                  class="main-logo"
@@ -113,7 +113,7 @@
                         <div class="main-nav__main-navigation">
                             <ul class="main-nav__navigation-box">
                                 <li class="current">
-                                    <a href="index.html">Home</a>
+                                    <a href="./">Home</a>
                                 </li>
                                 <li>
                                     <a href="shop.html">Shop</a>
@@ -608,7 +608,7 @@
                                 <h3>Explore</h3>
                             </div>
                             <ul class="footer-widget__links-list list-unstyled">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="./">Home</a></li>
                                 <li><a href="shop.html">Shop</a></li>
                                 <li><a href="team.html">Meet our Team</a></li>
                                 <li><a href="news.html">Latest News</a></li>
