--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
             </a>
           </div>
           <div class="topbar-one__middle">
-            <a href="index.html"
+            <a href="./"
                class="main-nav__logo">
               <img src="assets/images/resources/logo.png"
                    class="main-logo"
@@ -119,7 +119,7 @@
             <div class="main-nav__main-navigation">
               <ul class="main-nav__navigation-box">
                 <li>
-                  <a href="index.html">Home</a>
+                  <a href="./">Home</a>
                 </li>
                 <li class="dropdown">
                   <a href="#">Shop</a>
@@ -166,7 +166,7 @@
       <div class="container">
         <h2>Contact Us</h2>
         <ul class="thm-breadcrumb list-unstyled">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="./">Home</a></li>
           <li><span>Contact</span></li>
         </ul>
       </div>
@@ -370,7 +370,7 @@
                           <h3>Explore</h3>
                       </div>
                       <ul class="footer-widget__links-list list-unstyled">
-                          <li><a href="index.html">Home</a></li>
+                          <li><a href="./">Home</a></li>
                           <li><a href="shop.html">Shop</a></li>
                           <li><a href="team.html">Meet our Team</a></li>
                           <li><a href="news.html">Latest News</a></li>
