--- a/shop.html
+++ b/shop.html
@@ -88,7 +88,7 @@
                         </a>
                     </div>
                     <div class="topbar-one__middle">
-                        <a href="index.html"
+                        <a href="./"
                            class="main-nav__logo">
                             <img src="assets/images/resources/logo.png"
                                  class="main-logo"
@@ -122,7 +122,7 @@
                         <div class="main-nav__main-navigation">
                             <ul class="main-nav__navigation-box">
                                 <li>
-                                    <a href="index.html">Home</a>
+                                    <a href="./">Home</a>
                                 </li>
                                 <li class="current">
                                     <a href="shop.html">Shop</a>
@@ -160,7 +160,7 @@
             <div class="container">
                 <h2>Shop Now</h2>
                 <ul class="thm-breadcrumb list-unstyled">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="./">Home</a></li>
                     <li><a href=""
                            class="shop_style">Shop</a></li>
                     <li><span>Products</span></li>
@@ -504,7 +504,7 @@
                                 <h3>Explore</h3>
                             </div>
                             <ul class="footer-widget__links-list list-unstyled">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="./">Home</a></li>
                                 <li><a href="shop.html">Shop</a></li>
                                 <li><a href="team.html">Meet our Team</a></li>
                                 <li><a href="news.html">Latest News</a></li>
