--- a/team.html
+++ b/team.html
@@ -168,7 +168,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="team_one_single wow fadeInUp">
                             <div class="team_one_image">
-                                <img src="assets/images/team/ceo-1.jpg"
+                                <img src="assets/images/team/ceo-1.png"
                                      style="height: 415px; object-fit: cover; object-position: 10% 10%;"
                                      alt="">
                             </div>
