--- a/contact.html
+++ b/contact.html
@@ -121,15 +121,8 @@
                 <li>
                   <a href="./">Home</a>
                 </li>
-                <li class="dropdown">
-                  <a href="#">Shop</a>
-                  <ul>
-                    <li><a href="shop.html">Products</a></li>
-                    <li><a href="product.html">Product Detail</a></li>
-                    <li><a href="cart.html">Cart</a></li>
-                    <li><a href="checkout.html">Checkout</a></li>
-                  </ul>
-                  <!-- /.sub-menu -->
+                <li>
+                  <a href="shop.html/">Shop</a>
                 </li>
                 <li>
                   <a href="team.html">Our Team</a>
