--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
-    <title>TrustBasket Fertilizer | myfarmz</title>
+    <title>product | myfarmz</title>
     <link rel="apple-touch-icon"
           sizes="180x180"
           href="assets/images/favicons/apple-touch-icon.png">
