--- a/shop.html
+++ b/shop.html
@@ -247,7 +247,7 @@
                                                 </div>
                                                 <div class="title-box">
                                                     <h4><a href="#">Neem OIL</a></h4>
-                                                    <div class="value">$9.99</div>
+                                                    <div class="value">₹569.00</div>
                                                 </div>
                                             </div>
                                         </li>
@@ -263,7 +263,7 @@
                                                 </div>
                                                 <div class="title-box">
                                                     <h4><a href="#">Neem OIL</a></h4>
-                                                    <div class="value">$9.99</div>
+                                                    <div class="value">₹569.00</div>
                                                 </div>
                                             </div>
                                         </li>
