--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
                 <p>
                     <a href="mailto:needhelp@myfarmz.com">needhelp@myfarmz.com</a>
                     <br />
-                    <a href="tel:888-999-0000">Phone Number Here</a>
+                    <a href="javascript:void(0)">Phone Number Here</a>
                 </p>
                 <div class="side-menu__social">
                     <a href="#"><i class="fab fa-facebook-square"></i></a>
