--- a/team.html
+++ b/team.html
@@ -7,6 +7,7 @@
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
+    <meta name="author" content="Arnav and Aryan">
     <title>our team | myfarmz</title>
     <link rel="apple-touch-icon"
           sizes="180x180"
